--- a/css/styles.css
+++ b/css/styles.css
@@ -930,8 +930,8 @@ input[type="checkbox"] {
     }
 }
 
-/* Media queries para Ipad */
-@media only screen and (min-width: 375px) and (max-width: 500px) and (min-height: 640px) and (max-height: 1000px) {
+/* Media queries para iphone */
+@media only screen and (min-width: 375px) and (max-width: 700px) and (min-height: 640px) and (max-height: 900px) {
     .navigation-bar{
         display:none;
     }
@@ -1005,14 +1005,6 @@ input[type="checkbox"] {
         align-items: center;
         justify-content: center;
     }
-
-    /* main{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-    } */
-    /* Pagina sobre-mi responsiva */
     
     .contenedor-grid{
         grid-template-columns: 1fr;
@@ -1085,11 +1077,6 @@ input[type="checkbox"] {
         height:700px;
     }
 
-    /* .proyecto-descripcion1{
-        font-size: 10px;
-        margin-left: 100px;
-    } */
-
     .proyecto-texto{
         width: 70%;
     }
@@ -1105,11 +1092,6 @@ input[type="checkbox"] {
         width: 300px;
         height: 270px;
     }
-
-    /* #proyecto-descripcion1 {
-        padding:50px;
-        font-size: 10px;
-    } */
 
     .proyecto-texto{
         align-items: center;
