--- a/css/styles.css
+++ b/css/styles.css
@@ -697,7 +697,7 @@ input[type="checkbox"] {
 }
 
 /* Media queries para Ipad */
-@media only screen and (min-width: 768px) and (max-width: 820px) and (min-height: 1024px) and (max-height: 1180px) {
+@media only screen and (max-width:768px)/*(min-width: 768px) and (max-width: 820px) and (min-height: 1024px) and (max-height: 1180px)*/ {
     .navigation-bar{
         display:none;
     }
@@ -811,7 +811,7 @@ input[type="checkbox"] {
 }
 
 /* Para iPad horizontal */
-@media only screen and (min-width: 1024px) and (max-width: 1180px) and (min-height: 768px) and (max-height: 820px) {
+@media only screen and (max-width: 1024px)/*(min-width: 1024px) and (max-width: 1180px) and (min-height: 768px) and (max-height: 820px)*/ {
     .navigation-bar{
         display:none;
     }
@@ -931,7 +931,7 @@ input[type="checkbox"] {
 }
 
 /* Media queries para iphone */
-@media only screen and (min-width: 375px) and (max-width: 700px) and (min-height: 640px) and (max-height: 900px) {
+@media only screen and (max-width:375px)/*(min-width: 375px) and (max-width: 700px) and (min-height: 640px) and (max-height: 900px) */{
     .navigation-bar{
         display:none;
     }
