--- a/css/styles.css
+++ b/css/styles.css
@@ -872,7 +872,7 @@ input[type="checkbox"] {
 }
 
 /* Media queries para Ipad */
-@media only screen and (max-width:768px)/*(min-width: 768px) and (max-width: 820px) and (min-height: 1024px) and (max-height: 1180px)*/ {
+@media (min-width:376px) and (max-width:768px)/*(min-width: 768px) and (max-width: 820px) and (min-height: 1024px) and (max-height: 1180px)*/ {
     .navigation-bar{
         display:none;
     }
@@ -986,7 +986,7 @@ input[type="checkbox"] {
 }
 
 /* Para iPad horizontal */
-@media only screen and (max-width: 1024px)/*(min-width: 1024px) and (max-width: 1180px) and (min-height: 768px) and (max-height: 820px)*/ {
+@media (min-width: 769px) and (max-width: 1024px)/*(min-width: 1024px) and (max-width: 1180px) and (min-height: 768px) and (max-height: 820px)*/ {
     .navigation-bar{
         display:none;
     }
