--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,10 @@
     list-style: none;
 }
 
+body {
+    height: 100%;
+}
+
 a{
     text-decoration: none;
 }
@@ -867,8 +871,75 @@ input[type="checkbox"] {
     /* Formulario responsive */
 
     .formulario-div{
-        height: 1000px;
+        height: 900px;
     }
+
+    body {
+        height: 100%;
+    }
+
+    .form{
+        width: 70%;
+        height: 570px;
+
+        grid-template-columns: 1fr;
+        grid-template-rows: 80px 80px 80px 320px;
+    }
+
+    .nombre-form{
+        grid-row: 1;
+        grid-column:1;
+        display: flex;
+        flex-direction: column;
+
+    }
+
+    .nombre-form label{
+        padding-bottom: 10px;
+    }
+
+    .telefono-form{
+        grid-row: 2;
+        grid-column:1;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .telefono-form label{
+        padding-bottom: 10px;
+    }
+
+    .email-form{
+        grid-row: 3;
+        grid-column:1;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .email-form label{
+        padding-bottom: 10px;
+    }
+
+    .email-form input{
+        width: 130px;
+    }
+
+    .mensaje-form{
+        grid-row: 4;
+        grid-column:1;
+    }
+
+    textarea{
+        width: 130px;
+        margin: 0px;
+        height: 120px;
+    }
+
+    .etiqueta{
+        text-align: center;
+        padding-left: 0px;
+    }
+
 }
 
 /* Media queries para Ipad */
