--- a/css/styles.css
+++ b/css/styles.css
@@ -1179,6 +1179,6 @@ input[type="checkbox"] {
 /* Para computadoras con pantalla grande */
 @media (max-width: 1440px){
     .contenedor-grid{
-        height: 100%;
+        height: 800;
     }
 }
