--- a/css/styles.css
+++ b/css/styles.css
@@ -1185,9 +1185,45 @@ input[type="checkbox"] {
     .navigation-bar{
         height: 120px;
     }
+    
+
+    .sobremi p{
+        font-size: 16px;
+        padding:30px;
+    }
 
     .logo{
         height: 90px;
         width: 90px;
     }
+
+    .curso{
+        height: 230px;
+        width: 230px;
+    }
+
+    .curso p{
+        font-size: 14px;
+    }
+
+    .premio{
+        height: 230px;
+        width: 230px;
+    }
+
+    .premio p{
+        font-size: 14px;
+    }
+
+    .curies-img, .inroads-img{
+        height: 100px;
+        width: 100px;
+    }
+    .exc-img{
+        height: 120px;
+        width: 120px;
+    }
+
+
+    
 }
