fixing formulary size for bigger screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -1224,6 +1224,11 @@ input[type="checkbox"] {
         width: 120px;
     }
 
+    /* Formulario */
+    .form{
+        height: 890px;
+    }
+
 
     
 }
